<resources>
    <string name="app_name">Star Gazer Forecast</string>
    <string name="title_activity_main">Star Gazer - Keep Looking Up</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_name_menu">Star Gazer Forecast</string>
    <string name="app_menu_email">phil@philipyoung.ca</string>
    <string name="preference_true">Yes</string>
    <string name="preference_false">No</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="splash_title_description">Star Gazer Forecast</string>
    <string name="toast_initializing_screen">Initialize screen</string>
    <string name="toast_launching_app">Launching Star Gazer Forecast</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_send">Contact</string>
    <string name="nav_share">Share</string>
    <string name="nav_manage">Tools</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_sync">Download and Sync</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_location">Location Library</string>
    <string name="nav_group_communicate">Communicate</string>
    <string name="nav_exit">Exit</string>
    <string name="text_blank">……</string>
    <string name="blank_space" />
    <string name="db_toast_updating">Database Updating …</string>
    <string name="db_toast_initializing_database">Initialize database</string>
    <string name="gps_toast_initializing_location">Checking GPS for location</string>
    <string name="gps_location_name">Your Location</string>
    <string name="gps_dialog_first_run_location_title">First Run GPS</string>
    <string name="gps_dialog_first_run_location_message">Views of satellites are drastically different as you move from town to town.
        \nYou can turn on GPS tracking to follow Your Location from neighbourhood to neighbourhood
        \nOR you can keep GPS off to save on battery life.
        \n
        \nIf you decide to change this Setting, tap on the GPS button
        \nor go to the General tab and change Track GPS.</string>
    <string name="gps_dialog_first_run_location_positive">Track GPS</string>
    <string name="gps_dialog_first_run_location_negative">No GPS</string>
    <string name="gps_dialog_update_location_title">Location Updated</string>
    <string name="gps_dialog_update_location_message">You have updated your location.
        \nWould you like to download the forecast, now?</string>
    <string name="gps_dialog_update_location_positive">Download</string>
    <string name="gps_dialog_update_location_negative">Not yet</string>
    <string name="gps_dialog_updating_location_title">Location Updating</string>
    <string name="gps_dialog_updating_location_message">I am trying to update your location, but GPS satellites are out of range.
        \nCancel that and continue with app, now?</string>
    <string name="gps_dialog_updating_location_neutral">Okay</string>
    <string name="ws_no_internet">Lost Internet Connection</string>
    <string name="ws_toast_initializing_internet">Checking Internet for connection</string>
    <string name="ws_toast_initialized_internet">Internet connection successful</string>
    <string name="ws_downloading_updates">Downloading updates</string>
    <string name="ws_downloading_cancelled">Download cancelled</string>
    <string name="loclib_dialog_empty_library_title">Empty Library</string>
    <string name="loclib_dialog_empty_library_message">You have no locations in your library.
        \nYou still need to download the forecast.</string>
    <string name="loclib_dialog_empty_library_positive">Download</string>
    <string name="loclib_dialog_new_library_title">New Library</string>
    <string name="loclib_dialog_new_library_message">You have no locations in your library.
        \nGo to Settings, and in the General tab, change the name of the Observatory location name to something other than Your Location.
        \nThen, download the forecast.</string>
    <string name="loclib_dialog_new_library_positive">Okay</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Share the forecast on social media</string>
    <string name="pref_title_location_name">Observatory location name</string>
    <string name="pref_default_location_name">Your Location</string>
    <string name="pref_title_location_coordinates">Observatory location</string>
    <string name="pref_default_display_location">43.3N 79.8W</string>
    <string-array name="pref_location_example_list_titles">
        <item>Your Location</item>
    </string-array>
    <string-array name="pref_location_example_list_values">
        <item>-1</item>
    </string-array>
    <string-array name="pref_location_example_list_coordinates">
        <item>43.3N 79.8W</item>
    </string-array>
    <string name="pref_title_location_gps">Track GPS</string>
    <string name="pref_description_location_gps">When you update weather and events, use GPS to find Your Location.
        \nTo keep track of your favourite observation points, update the Observatory Location Name.</string>
    <string name="pref_title_location_gps_snap">Snap GPS</string>
    <string name="pref_description_location_gps_snap">Fetch a known location when you are in the neighbourhood.</string>
    <string name="pref_title_track_location">Track location</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="document_share_subject">Star Gazer Forecast</string>
    <string name="document_share_positive">next</string>
    <string name="document_share_negative">skip</string>
    <string name="document_share_neutral">prev</string>
    <string name="document_share_done">send</string>
    <string name="document_share_introduction">Hey there!  You gotta see what\'s up in the sky.</string>
    <string name="document_share_weather">The weather is going to be %s. %s, and then %s.</string>
    <string name="document_share_weather_grade_bad">bad</string>
    <string name="document_share_weather_grade_good">good</string>
    <string name="document_share_weather_grade_great">great</string>
    <string name="document_share_weather_grade_unknown">unknown</string>
    <string name="document_share_moon">The %s is at %s.</string>
    <string name="document_share_meteor_shower">The %1$s meteor shower %2$s tonight.  It\'s best viewed at %3$tl:%3$tM %3$Tp.</string>
    <string name="document_share_meteor_shower_peak">peaks</string>
    <string name="document_share_meteor_shower_begin">begins</string>
    <string name="document_share_meteor_shower_continue">continues</string>
    <string name="document_share_conjunction">%s is in close conjunction with %s.</string>
    <string name="document_share_planets">We\'re going to see %s.</string>
    <string name="document_share_comet">Comet %s is at magnitude %.2f.</string>
    <string name="document_share_aurora">The Northern Lights are predicted to have a %d%% chance to be active tonight.</string>
    <string name="document_share_iss">The ISS will go floating by at %1$tl:%1$tM %1$Tp.</string>
    <string name="document_share_variable_star_visible">%s is just becoming visible to the unaided eye.</string>
    <string name="document_share_variable_star_maximum">%s is reaching its maximum luminosity.</string>
    <string name="document_share_variable_star_eclipse">%1$s is eclipsing starting at %2$tl:%2$tM %2$Tp, reaching minimum brightness at%3$tl:%3$tM %3$Tp.</string>
    <string name="document_share_eclipse">There is going to be a %1$s eclipse on %2$tB %2$te.</string>
    <string name="document_share_closing">So, will you meet me at %s at %.2f°%s %.2f°%s in %s?</string>
    <string name="document_share_too_long">This message may be too long to send to some SMS recipients.</string>
    <string name="document_share_much_too_long">This message is much too long to send to SMS recipients.</string>
    <string name="document_contact_email_address">phil@philipyoung.ca</string>
    <string name="document_contact_email_subject">Star Gazer Forecast</string>
    <string name="document_contact_email_body">I really like the Star Gazer Forecast you created, but it would be better if it did this.
        \n\nYour message here
        \n\nRegards,\n\nName:\nEmail:\nPhone:\n</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_key_1">Meteors</string>
    <string name="pref_description_key_1">Notify when a significant meteor
        shower is peaking</string>
    <string name="pref_title_key_2">Moon</string>
    <string name="pref_description_key_2">Display asterisk on main screen if
        the Moon is currently above the horizon, day or night</string>
    <string name="pref_title_key_2_phase">Phase preference</string>
    <string name="pref_title_key_3">Planets</string>
    <string name="pref_description_key_3">Display asterisk on main screen if any
        planets will be visible in the night sky</string>
    <string name="pref_title_key_3_planets">Planets to alert</string>
    <string name="pref_title_key_3_conjunctions">Conjunctions</string>
    <string name="pref_description_key_3_conjunctions">Display asterisk on main screen if any
        planets or the Moon will be near a bright star or planet in the night sky</string>
    <string name="pref_title_key_3_conjunctions_distance">Alert when it gets closer than</string>
    <string name="pref_title_key_4">Comets</string>
    <string name="pref_description_key_4">Notify when a comet is visible</string>
    <string name="pref_title_key_5">Aurora</string>
    <string name="pref_description_key_5">Notify when the aurora will be visible,
        based on location, weather, and lighting conditions</string>
    <string name="pref_title_key_6">Satellites</string>
    <string name="pref_description_key_6">Notify when satellites are about to
        pass overhead, based on location and weather</string>
    <string name="pref_title_key_6_satellite_iss">Alert for International Space Station (ISS)</string>
    <string name="pref_title_key_6_satellite_iridium">Alert for Iridium Flare Satellites</string>
    <string name="pref_title_key_6_satellite_other">Alert for all Other Satellites</string>
    <string name="pref_title_key_7">Constellations</string>
    <string name="pref_description_key_7">Display asterisk on main screen if any
        of your favourite constellations will be visible in the night sky</string>
    <string name="pref_title_key_7_constellations">Constellations to alert</string>
    <string name="pref_title_key_8">Variable stars</string>
    <string name="pref_description_key_8">Notify when a variable star will be nearing maximum
        or minimum in the night sky</string>
    <string name="pref_title_key_9">Eclipses</string>
    <string name="pref_description_key_9">Notify when a solar or lunar eclipse will occur</string>
    <string name="pref_header_constellation_alphabetical">Constellations A-Z</string>
</resources>