<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_location_example_list_titles"
        android:entryValues="@array/pref_location_example_list_values"
        android:key="observatory_id"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_location_coordinates" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_location_name"
        android:inputType="textCapWords"
        android:key="observatory_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_location_name" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_location"
        android:inputType="textCapWords"
        android:key="coordinate_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_location_coordinates" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
           dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!-- ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_track_location" / -->

    <SwitchPreference
        android:defaultValue="false"
        android:key="gps_switch"
        android:summary="@string/pref_description_location_gps"
        android:title="@string/pref_title_location_gps" />

    <SwitchPreference
        android:dependency="gps_switch"
        android:defaultValue="true"
        android:key="gps_switch_snap"
        android:summary="@string/pref_description_location_gps_snap"
        android:title="@string/pref_title_location_gps_snap" />

    <!-- SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" / -->

</PreferenceScreen>
